# django_simple_api

./: Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: deploy_dev.yaml
django_simple_api/: asgi.py  settings.py  urls.py  wsgi.py
