[tool.poetry]
name = "django_simple_api"
version = "0.1.0"
description = "Simple Django API"
authors = ["Andre Nunes <afenunes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
